<?php

declare(strict_types=1);

namespace DoctrineMigrations;

use Doctrine\DBAL\Schema\Schema;
use Doctrine\Migrations\AbstractMigration;

/**
 * Auto-generated Migration: Please modify to your needs!
 */
final class Version20260110181857 extends AbstractMigration
{
    public function getDescription(): string
    {
        return '';
    }

    public function up(Schema $schema): void
    {
        // this up() migration is auto-generated, please modify it to your needs
        $this->addSql('CREATE TABLE client (id INT GENERATED BY DEFAULT AS IDENTITY NOT NULL, nom VARCHAR(255) NOT NULL, telephone VARCHAR(20) NOT NULL, email VARCHAR(255) DEFAULT NULL, preferences JSON DEFAULT NULL, consentement_rgpd BOOLEAN NOT NULL, taux_noshow DOUBLE PRECISION DEFAULT NULL, created_at TIMESTAMP(0) WITHOUT TIME ZONE NOT NULL, PRIMARY KEY (id))');
        $this->addSql('CREATE TABLE reservation (id INT GENERATED BY DEFAULT AS IDENTITY NOT NULL, date_reservation DATE NOT NULL, heure_reservation TIME(0) WITHOUT TIME ZONE NOT NULL, nombre_personnes INT NOT NULL, statut VARCHAR(20) NOT NULL, demandes_speciales TEXT DEFAULT NULL, created_at TIMESTAMP(0) WITHOUT TIME ZONE NOT NULL, client_id INT NOT NULL, restaurant_id INT NOT NULL, table_reservee_id INT DEFAULT NULL, PRIMARY KEY (id))');
        $this->addSql('CREATE INDEX IDX_42C8495519EB6921 ON reservation (client_id)');
        $this->addSql('CREATE INDEX IDX_42C84955B1E7706E ON reservation (restaurant_id)');
        $this->addSql('CREATE INDEX IDX_42C84955FADAFB68 ON reservation (table_reservee_id)');
        $this->addSql('CREATE TABLE restaurant (id INT GENERATED BY DEFAULT AS IDENTITY NOT NULL, nom VARCHAR(255) NOT NULL, adresse TEXT NOT NULL, telephone VARCHAR(20) NOT NULL, email VARCHAR(255) NOT NULL, capacite_totale INT NOT NULL, duree_repas INT NOT NULL, buffer_nettoyage INT NOT NULL, PRIMARY KEY (id))');
        $this->addSql('CREATE TABLE service (id INT GENERATED BY DEFAULT AS IDENTITY NOT NULL, type VARCHAR(20) NOT NULL, heure_debut TIME(0) WITHOUT TIME ZONE NOT NULL, heure_fin TIME(0) WITHOUT TIME ZONE NOT NULL, jours_ouverture JSON NOT NULL, restaurant_id INT NOT NULL, PRIMARY KEY (id))');
        $this->addSql('CREATE INDEX IDX_E19D9AD2B1E7706E ON service (restaurant_id)');
        $this->addSql('CREATE TABLE "table" (id INT GENERATED BY DEFAULT AS IDENTITY NOT NULL, numero_table VARCHAR(10) NOT NULL, capacite INT NOT NULL, type VARCHAR(50) NOT NULL, statut VARCHAR(20) NOT NULL, restaurant_id INT NOT NULL, PRIMARY KEY (id))');
        $this->addSql('CREATE INDEX IDX_F6298F46B1E7706E ON "table" (restaurant_id)');
        $this->addSql('CREATE TABLE messenger_messages (id BIGINT GENERATED BY DEFAULT AS IDENTITY NOT NULL, body TEXT NOT NULL, headers TEXT NOT NULL, queue_name VARCHAR(190) NOT NULL, created_at TIMESTAMP(0) WITHOUT TIME ZONE NOT NULL, available_at TIMESTAMP(0) WITHOUT TIME ZONE NOT NULL, delivered_at TIMESTAMP(0) WITHOUT TIME ZONE DEFAULT NULL, PRIMARY KEY (id))');
        $this->addSql('CREATE INDEX IDX_75EA56E0FB7336F0E3BD61CE16BA31DBBF396750 ON messenger_messages (queue_name, available_at, delivered_at, id)');
        $this->addSql('ALTER TABLE reservation ADD CONSTRAINT FK_42C8495519EB6921 FOREIGN KEY (client_id) REFERENCES client (id) NOT DEFERRABLE');
        $this->addSql('ALTER TABLE reservation ADD CONSTRAINT FK_42C84955B1E7706E FOREIGN KEY (restaurant_id) REFERENCES restaurant (id) NOT DEFERRABLE');
        $this->addSql('ALTER TABLE reservation ADD CONSTRAINT FK_42C84955FADAFB68 FOREIGN KEY (table_reservee_id) REFERENCES "table" (id) NOT DEFERRABLE');
        $this->addSql('ALTER TABLE service ADD CONSTRAINT FK_E19D9AD2B1E7706E FOREIGN KEY (restaurant_id) REFERENCES restaurant (id) NOT DEFERRABLE');
        $this->addSql('ALTER TABLE "table" ADD CONSTRAINT FK_F6298F46B1E7706E FOREIGN KEY (restaurant_id) REFERENCES restaurant (id) NOT DEFERRABLE');
    }

    public function down(Schema $schema): void
    {
        // this down() migration is auto-generated, please modify it to your needs
        $this->addSql('ALTER TABLE reservation DROP CONSTRAINT FK_42C8495519EB6921');
        $this->addSql('ALTER TABLE reservation DROP CONSTRAINT FK_42C84955B1E7706E');
        $this->addSql('ALTER TABLE reservation DROP CONSTRAINT FK_42C84955FADAFB68');
        $this->addSql('ALTER TABLE service DROP CONSTRAINT FK_E19D9AD2B1E7706E');
        $this->addSql('ALTER TABLE "table" DROP CONSTRAINT FK_F6298F46B1E7706E');
        $this->addSql('DROP TABLE client');
        $this->addSql('DROP TABLE reservation');
        $this->addSql('DROP TABLE restaurant');
        $this->addSql('DROP TABLE service');
        $this->addSql('DROP TABLE "table"');
        $this->addSql('DROP TABLE messenger_messages');
    }
}
